objects/recreate__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAINT BARTHÉL</fullName>
                </value>
                <value>
                    <fullName>RÉcepie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>recreate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>recreate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>recreates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>